
0.11:
=====
refactored the ccat driver to work more similar to the pci subsystem + device drivers:
- uncouple ccat core functionality from FPGA function block specific drivers
- adding multiple instances of the same function block should work automagically now
- adding new drivers for other FPGA function block should be more easy now
add driver for the GPIO function block

Test log:
-------------|      | generic/|
    Kernel   | arch | ec_ccat | device |  os   |result (fping, netio, etherlab)
=============|======|=========|================================================
3.4.97-rt121 |x86_64| ec_ccat | CX2030 | 14.04 | no errors
3.14.12-rt9  |x86_64| ec_ccat | CX2030 | 14.04 | no errors

* os/14.04 means Ubuntu 14.04 LTS



0.10:
=====
buf fixes/new features:
- move first netif_carrier_off() in front of register_netdev()
- replace polling threads with hrtimer callback
- CCATRXDESC_HEADER_LEN was defined 4 bytes to short. Now, it is replaced
  by CCAT_ETH_FRAME_HEAD_LEN, which is derived as an offset.
- prepare code to allow multiple CCAT instances in parallel (removed static size_t next from tx and rx pathes)
- fixed endianess

code cleanup:
- remove debugging code from mainline tree
- reorder functions in netdev.c to avoid forward declarations
- reorder functions in update.c to avoid forward declarations
- don't use compat.h in the mainline tree
- reduce enum ccat_info_t to the minimal set of defines
- replace CamelCased Windows typedef structs with linux types
- use short kernel types, add empty lines after variable declaration to conform with linux codestyle
- added some more const correctness
- reorder signature of fifo_add() "this" pointer is first now
- reduce pointer indirection

Test log:
----------|      | generic/|
  Kernel  | arch | ec_ccat | device |  os   | fping, netio, etherlab, SOEM
==========|======|=========|==============================================
3.16.0-rc3|x86_64| ec_ccat | CX2030 | 14.04 | no errors